--- a/angular.html
+++ b/angular.html
@@ -2,7 +2,7 @@
     <head>
         <script src="angular.js"></script>
         <script src="script.js"></script>
-        <link rel="styles.css">
+        <link href="styles.css" rel="stylesheet"/>
     </head>
     <body>
         <div ng-controller="myController">
